# AiForgeMemory

./: .gitignore  Makefile  README.md  pyproject.toml
aiforge_memory/: README.md  __init__.py  config.py
aiforge_memory/api/: __init__.py  cli.py  read.py
aiforge_memory/eval/: harness.py  probes.example.yaml
aiforge_memory/ingest/: __init__.py  delta.py  edges.py  embed.py  file_summary.py  flow.py  git_meta.py  link.py  pack_repo.py  repo_summary.py  scheduler.py  service_extract.py  symbol_summary.py  treesitter_walk.py
aiforge_memory/ingest/lsp/: __init__.py  adapters.py  client.py  resolver.py
aiforge_memory/ingest/prompts/: file_summary.txt  repo_summary.txt  service_extract.txt  symbol_summary.txt
aiforge_memory/ingest/queries/: java.scm  javascript.scm  python.scm  typescript.scm
aiforge_memory/ops/: backup.py  health.py  run_all_summaries.sh
aiforge_memory/query/: __init__.py  bundle.py  fastpath.py  translator.py
aiforge_memory/store/: __init__.py  chunk_writer.py  file_summary_writer.py  link_writer.py  memory_writer.py  repo_writer.py  schema.py  service_writer.py  state_db.py  symbol_summary_writer.py  symbol_writer.py
aiforge_memory/tests/: README.md
aiforge_memory/tests/L0_config/: test_config.py
aiforge_memory/tests/L10_delta/: test_delta_unit.py
aiforge_memory/tests/L11_eval/: test_harness_unit.py
aiforge_memory/tests/L12_scheduler/: test_scheduler_unit.py
aiforge_memory/tests/L13_symbol_enrich/: test_symbol_enrichment.py
aiforge_memory/tests/L14_lsp/: test_lsp_unit.py
aiforge_memory/ui/: index.html  server.py
(+54 files in other folders)
